--- a/card.html
+++ b/card.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="styles.css">
 <head>
 	<meta charset="utf-8">
 	<title>Animal Trading Cards</title>
 </head>
 <body>
-	<div>
+	<div class="center card">
 		<!-- your favorite animal's name goes here -->
 		<h3>Siberian Husky</h3>
 		<!-- your favorite animal's image goes here -->
 		<img src="husky.jpg" alt="Siberian Husky">
-		<div>
+		<div class="card">
 			<!-- your favorite animal's interesting fact goes here -->
-			<p>
+			<p class="fact">
 				Huskies are born to run. When the semi-nomadic Chukchi people of Siberia had to expand their 
 				hunting grounds some 3000 years ago, they sought to breed the ideal sled dog.
 			</p>
 			<ul>
 				<!-- your favorite animal's list items go here -->
-				<li><span>Scientific Name</span>:Canis lupus familiaris	</li>
+				<li><span>Scientific Name</span>: Canis lupus familiaris</li>
 				<li><span>Average Length</span>: 22 inches</li>
 				<li><span>Life Span</span>: 14 years</li> 
 				<li><span>Habitat</span>: Siberian Tundra</li>
