--- a/card.html
+++ b/card.html
@@ -11,7 +11,7 @@
 		<h3>Siberian Husky</h3>
 		<!-- your favorite animal's image goes here -->
 		<img src="husky.jpg" alt="Siberian Husky">
-		<div class="card">
+		<div class="content">
 			<!-- your favorite animal's interesting fact goes here -->
 			<p class="fact">
 				Huskies are born to run. When the semi-nomadic Chukchi people of Siberia had to expand their 
